--- a/package.json
+++ b/package.json
@@ -16,6 +16,14 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.1",
     "@types/pug": "^2.0.10",
-    "@types/sequelize": "^4.28.20"
+    "@types/sequelize": "^4.28.20",
+    "sequelize-cli": "^6.6.2",
+    "typescript": "^5.4.2",
+    "ts-node": "^10.9.2"
+  },
+  "scripts": {
+    "dev": "ts-node index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   }
 }
